--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">NFC Kopernik Scanner</string>
+    <string name="jd">Jebać disa skurwysyna, syna diabła orka jebanego\nJebać disa skurwysyna, syna diabła orka jebanego\nJebać disa skurwysyna, syna diabła orka jebanego\nJebać disa skurwysyna, syna diabła orka jebanego\nJebać disa skurwysyna, syna diabła orka jebanego\nJebać disa skurwysyna, syna diabła orka jebanego\nJebać disa skurwysyna, syna diabła orka jebanego\nJebać disa skurwysyna, syna diabła orka jebanego\nJebać disa skurwysyna, syna diabła orka jebanego\nJebać disa skurwysyna, syna diabła orka jebanego\nJebać disa skurwysyna, syna diabła orka jebanego\nJebać disa skurwysyna, syna diabła orka jebanego\nJebać disa skurwysyna, syna diabła orka jebanego\nJebać disa skurwysyna, syna diabła orka jebanego\nJebać disa skurwysyna, syna diabła orka jebanego\nJebać disa skurwysyna, syna diabła orka jebanego\nJebać disa skurwysyna, syna diabła orka jebanego</string>
 </resources>
