--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,22 @@
 <resources>
     <string name="app_name">NFC Kopernik Scanner</string>
     <string name="jd">informacje\ninformacje\ninformacje\ninformacje\ninformacje\ninformacje\ninformacje\ninformacje\ninformacje\ninformacje\ninformacje\ninformacje\ninformacje\ninformacje</string>
+    \
+    <string name="messages">Messages:</string>
+    <string name="message">Message</string>
+    <string name="send">Send</string>
+    <string name="paired_devices">Paired devices:</string>
+    <string name="no_messages">No messages sent!</string>
+    <string name="no_bluetooth">Bluetooth not available.</string>
+    <string name="device_name_format">Device: %1$s</string>
+    <string name="status_connecting">Status: Connecting</string>
+    <string name="status_connected">Status: Connected</string>
+    <string name="status_disconnected">Status: Disconnected</string>
+    <string name="connect">Connect</string>
+    <string name="connected">Connected</string>
+    <string name="disconnect">Disconnect</string>
+    <string name="connection_failed">Connection Failed.</string>
+    <string name="bluetooth_unavailable">Connection Failed.</string>
+    <string name="message_send_error">Error sending message!</string>
+    <string name="you_sent">You</string>
 </resources>
